Fix issue with overflow in Columns layout.

--- a/src/blocks/portfolio/style.scss
+++ b/src/blocks/portfolio/style.scss
@@ -97,8 +97,9 @@ $primary_color: #0bb4aa;
             margin: 0 auto;
             max-width: 1200px;
             padding: 0 30px;
-            display: grid;
+            display: flex;
             flex-wrap: wrap;
+            justify-content: space-between;
             gap: 2%;
         }
 
@@ -322,10 +323,19 @@ $primary_color: #0bb4aa;
         display: none;
     }
 
-    &.layout-list.columns-1 .wpzoom-blocks_portfolio-block_items-list { grid-template-columns: repeat(1, 1fr); }
-    &.layout-list.columns-2 .wpzoom-blocks_portfolio-block_items-list { grid-template-columns: repeat(2, 1fr); }
-    &.layout-list.columns-3 .wpzoom-blocks_portfolio-block_items-list { grid-template-columns: repeat(3, 1fr); }
-    &.layout-list.columns-4 .wpzoom-blocks_portfolio-block_items-list { grid-template-columns: repeat(4, 1fr); }
+    &.layout-list.columns-1 .wpzoom-blocks_portfolio-block_item { 
+        flex-basis: 100%;
+    }
+    &.layout-list.columns-2 .wpzoom-blocks_portfolio-block_item { 
+        flex-basis: 49%;
+    }
+    
+    &.layout-list.columns-3 .wpzoom-blocks_portfolio-block_item { 
+        flex-basis: 32%;
+    }
+    &.layout-list.columns-4 .wpzoom-blocks_portfolio-block_item { 
+        flex-basis: 23%;
+    }
 
     &.layout-grid.columns-1 .wpzoom-blocks_portfolio-block_items-list { grid-template-columns: repeat(1, 1fr); }
     &.layout-grid.columns-2 .wpzoom-blocks_portfolio-block_items-list { grid-template-columns: repeat(2, 1fr); }
